# abs

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
benchmarks/: abs_bench.cpp
cmake/: absConfig.cmake.in
examples/consumer/: CMakeLists.txt  main.cpp
examples/sdl3_gl4/: main.cpp
include/: absinc.h
include/abs/: abs.hpp  batch.hpp  camera.hpp  geometry.hpp  interpolation.hpp  intersection.hpp  matrix.hpp  numeric.hpp  polar.hpp  quaternion.hpp  sampling.hpp  simd.hpp  transform.hpp  vec3.hpp
scripts/: run_bench_variants.sh
src/: abs.cpp  scene_example.cpp
